@@ -18,9 +18,7 @@ package org.openrewrite.internal;
 import org.junit.jupiter.api.Test;
 
 import java.io.ByteArrayInputStream;
-import java.io.IOException;
 import java.nio.charset.Charset;
-import java.util.Arrays;
 import java.util.List;
 
 import static java.nio.charset.StandardCharsets.ISO_8859_1;
@@ -32,7 +30,7 @@ class EncodingDetectingInputStreamTest {
     private static final Charset WINDOWS_1252 = Charset.forName("Windows-1252");
 
     @Test
-    void detectUTF8Bom() throws IOException {
+    void detectUTF8Bom() throws Exception {
         String str = "\uFEFF";
         try (EncodingDetectingInputStream is = new EncodingDetectingInputStream(new ByteArrayInputStream(str.getBytes(UTF_8)))) {
             assertThat(is.readFully()).isEqualTo("");
@@ -41,7 +39,7 @@ class EncodingDetectingInputStreamTest {
     }
 
     @Test
-    void emptyUtf8() throws IOException {
+    void emptyUtf8() throws Exception {
         String str = "";
         try (EncodingDetectingInputStream is = new EncodingDetectingInputStream(new ByteArrayInputStream(str.getBytes(UTF_8)))) {
             assertThat(is.readFully()).isEqualTo(str);
@@ -50,7 +48,7 @@ class EncodingDetectingInputStreamTest {
     }
 
     @Test
-    void singleCharUtf8() throws IOException {
+    void singleCharUtf8() throws Exception {
         String str = "1";
         try (EncodingDetectingInputStream is = new EncodingDetectingInputStream(new ByteArrayInputStream(str.getBytes(UTF_8)))) {
             assertThat(is.readFully()).isEqualTo(str);
@@ -59,7 +57,7 @@ class EncodingDetectingInputStreamTest {
     }
 
     @Test
-    void skipUTF8Bom() throws IOException {
+    void skipUTF8Bom() throws Exception {
         String bom = "\uFEFFhello";
         try (EncodingDetectingInputStream is = new EncodingDetectingInputStream(new ByteArrayInputStream(bom.getBytes(UTF_8)))) {
             assertThat(is.readFully()).isEqualTo("hello");
@@ -68,7 +66,7 @@ class EncodingDetectingInputStreamTest {
     }
 
     @Test
-    void skipUTF8BomKnownEncoding() throws IOException {
+    void skipUTF8BomKnownEncoding() throws Exception {
         String bom = "\uFEFFhello";
         try (EncodingDetectingInputStream is = new EncodingDetectingInputStream(new ByteArrayInputStream(bom.getBytes(UTF_8)), UTF_8)) {
             assertThat(is.readFully()).isEqualTo("hello");
@@ -77,8 +75,8 @@ class EncodingDetectingInputStreamTest {
     }
 
     @Test
-    void isUtf8() throws IOException {
-        List<String> accents = Arrays.asList("Café", "Lýðræðisríki");
+    void isUtf8() throws Exception {
+        List<String> accents = List.of("Café", "Lýðræðisríki");
         for (String accent : accents) {
             try (EncodingDetectingInputStream is = read(accent, UTF_8)) {
                 assertThat(is.getCharset()).isEqualTo(UTF_8);
@@ -87,8 +85,8 @@ class EncodingDetectingInputStreamTest {
     }
 
     @Test
-    void isWindows1252() throws IOException {
-        List<String> accents = Arrays.asList("Café", "Lýðræðisríki");
+    void isWindows1252() throws Exception {
+        List<String> accents = List.of("Café", "Lýðræðisríki");
         for (String accent : accents) {
             try (EncodingDetectingInputStream is = read(accent, WINDOWS_1252)) {
                 assertThat(is.getCharset()).isEqualTo(WINDOWS_1252);
@@ -97,7 +95,7 @@ class EncodingDetectingInputStreamTest {
     }
 
     @Test
-    void oddPairInWindows1252() throws IOException {
+    void oddPairInWindows1252() throws Exception {
         // Range 1: 0xC0 - 0xDF == "ÀÁÂÃÄÅÆÇÈÉÊËÌÍÎÏÐÑÒÓÔÕÖ×ØÙÚÛÜÝÞß"
         // Range 2: 0x80 - 0xBF == "€‚ƒ„…†‡ˆ‰Š‹ŒŽ‘’“”·–—˜™š›œžŸ¡¢£¤¥¦§¨©ª«¬®¯°±²³´µ¶·¸¹º»¼½¾¿"
         // A character in range 1 followed by a character in range 2 encoded in Windows-1252 will be detected as UTF-8.
@@ -107,7 +105,7 @@ class EncodingDetectingInputStreamTest {
     }
 
     @Test
-    void utf8Characters() throws IOException {
+    void utf8Characters() throws Exception {
         for (int i = 192; i < 2048; i++) {
             String c = Character.toString((char) i);
             try (EncodingDetectingInputStream is = read(c, UTF_8)) {
@@ -117,7 +115,7 @@ class EncodingDetectingInputStreamTest {
     }
 
     @Test
-    void windows1252SpecialCharacters() throws IOException {
+    void windows1252SpecialCharacters() throws Exception {
         String specialCharacters = "€‚ƒ„…†‡ˆ‰Š‹ŒŽ‘’“”·–—˜™š›œžŸ¡¢£¤¥¦§¨©ª«¬®¯°±²³´µ¶·¸¹º»¼½¾¿";
         for (char c : specialCharacters.toCharArray()) {
             String parse = String.valueOf(c);
