@@ -16,20 +16,25 @@
 package org.openrewrite.gradle;
 
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.openrewrite.*;
 import org.openrewrite.gradle.marker.GradleDependencyConfiguration;
 import org.openrewrite.gradle.marker.GradleProject;
+import org.openrewrite.maven.tree.ResolvedDependency;
 import org.openrewrite.properties.PropertiesParser;
 import org.openrewrite.test.RecipeSpec;
 import org.openrewrite.test.RewriteTest;
 import org.openrewrite.text.PlainTextParser;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Optional;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.InstanceOfAssertFactories.list;
+import static org.assertj.core.api.InstanceOfAssertFactories.type;
 import static org.openrewrite.gradle.Assertions.*;
 import static org.openrewrite.gradle.toolingapi.Assertions.withToolingApi;
 import static org.openrewrite.properties.Assertions.properties;
@@ -51,11 +56,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 compileOnly 'com.google.guava:guava:29.0-jre'
                 runtimeOnly ('com.google.guava:guava:29.0-jre')
@@ -65,11 +70,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 compileOnly 'com.google.guava:guava:30.1.1-jre'
                 runtimeOnly ('com.google.guava:guava:30.1.1-jre')
@@ -109,7 +114,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.0-M1'
               }
@@ -117,7 +122,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.27'
               }
@@ -137,11 +142,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 testImplementation("org.mockito:mockito-junit-jupiter:3.12.4")
               }
@@ -150,11 +155,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 testImplementation("org.mockito:mockito-junit-jupiter:4.11.0")
               }
@@ -189,13 +194,13 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               def guavaVersion = '29.0-jre'
               def otherVersion = "latest.release"
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation ("com.google.guava:guava:$guavaVersion")
                 implementation "com.fasterxml.jackson.core:jackson-databind:$otherVersion"
@@ -205,18 +210,47 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               def guavaVersion = '30.1.1-jre'
               def otherVersion = "latest.release"
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation ("com.google.guava:guava:$guavaVersion")
                 implementation "com.fasterxml.jackson.core:jackson-databind:$otherVersion"
               }
               """
+          )
+        );
+    }
+
+    @Test
+    void updateVersionInVariableToRelease() {
+        rewriteRun(
+          spec -> spec.recipe(new UpgradeDependencyVersion("org.springframework.boot", "spring-boot", "3.5.x", null)),
+          //language=groovy
+          buildGradle(
+            """
+              plugins {
+                id 'java-library'
+              }
+
+              def springBootVersion = '3.1.5'
+              repositories {
+                mavenCentral()
+              }
+
+              dependencies {
+                implementation ("org.springframework.boot:spring-boot:$springBootVersion")
+              }
+              """,
+            spec -> spec.after(actual ->
+              assertThat(actual)
+                .containsPattern("def springBootVersion = '3.5.\\d+'")
+                .actual()
+            )
           )
         );
     }
@@ -229,7 +263,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               dependencies {
                 implementation project(":foo:bar:baz:qux:quux")
               }
@@ -261,11 +295,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation(
                   'com.google.guava:guava-gwt:29.0-jre',
@@ -276,11 +310,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation(
                   'com.google.guava:guava-gwt:29.0-jre',
@@ -299,12 +333,12 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               def guavaVersion = '29.0-jre'
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation group: "com.google.guava", name: "guava", version: guavaVersion
               }
@@ -313,12 +347,12 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               def guavaVersion = '30.1.1-jre'
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation group: "com.google.guava", name: "guava", version: guavaVersion
               }
@@ -335,11 +369,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation (group: "com.google.guava", name: "guava", version: '29.0-jre')
               }
@@ -348,15 +382,93 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation (group: "com.google.guava", name: "guava", version: '30.1.1-jre')
               }
               """
+          )
+        );
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"$guavaVersion", "${guavaVersion}"})
+    void mapNotationGStringInterpolation(String stringInterpolationReference) {
+        rewriteRun(
+          buildGradle(
+                  """
+              plugins {
+                id 'java-library'
+              }
+
+              repositories {
+                mavenCentral()
+              }
+
+              def guavaVersion = '29.0-jre'
+
+              dependencies {
+                implementation(group: "com.google.guava", name: "guava", version: "%s")
+              }
+              """.formatted(stringInterpolationReference),
+                  """
+              plugins {
+                id 'java-library'
+              }
+
+              repositories {
+                mavenCentral()
+              }
+
+              def guavaVersion = '30.1.1-jre'
+
+              dependencies {
+                implementation(group: "com.google.guava", name: "guava", version: "%s")
+              }
+              """.formatted(stringInterpolationReference)
+          )
+        );
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"$guavaVersion", "${guavaVersion}"})
+    void mapNotationKStringTemplateInterpolation(String stringInterpolationReference) {
+        rewriteRun(
+          buildGradleKts(
+                  """
+              plugins {
+                `java-library`
+              }
+
+              repositories {
+                mavenCentral()
+              }
+
+              val guavaVersion = "29.0-jre"
+
+              dependencies {
+                implementation(group = "com.google.guava", name = "guava", version = "%s")
+              }
+              """.formatted(stringInterpolationReference),
+                  """
+              plugins {
+                `java-library`
+              }
+
+              repositories {
+                mavenCentral()
+              }
+
+              val guavaVersion = "30.1.1-jre"
+
+              dependencies {
+                implementation(group = "com.google.guava", name = "guava", version = "%s")
+              }
+              """.formatted(stringInterpolationReference)
           )
         );
     }
@@ -370,11 +482,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation platform("com.google.guava:guava:29.0-jre")
               }
@@ -383,11 +495,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation platform("com.google.guava:guava:30.1.1-jre")
               }
@@ -404,15 +516,15 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   id "java"
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               ext {
                   guavaVersion2 = "29.0-jre"
               }
-              
+
               dependencies {
                   implementation "com.google.guava:guava:${guavaVersion2}"
               }
@@ -421,15 +533,15 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   id "java"
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               ext {
                   guavaVersion2 = "30.1.1-jre"
               }
-              
+
               dependencies {
                   implementation "com.google.guava:guava:${guavaVersion2}"
               }
@@ -467,7 +579,88 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                       classpath("com.google.guava:guava:${guavaVersion}")
                   }
               }
+              """,
+            spec -> spec.afterRecipe(cu ->
+                //noinspection DataFlowIssue
+                assertThat(cu.getMarkers().findFirst(GradleProject.class))
+                  .get()
+                  .asInstanceOf(type(GradleProject.class))
+                  .extracting(gp -> gp.getBuildscript().getConfigurations())
+                  .asInstanceOf(list(GradleDependencyConfiguration.class))
+                  .singleElement()
+                  .extracting(conf -> conf.findResolvedDependency("com.google.guava", "guava"))
+                  .isNotNull()
+                  .extracting(ResolvedDependency::getVersion)
+                  .as("GradleProject model should reflect the updated guava version")
+                  .isEqualTo("30.1.1-jre"))
+          )
+        );
+    }
+
+    @Test
+    void upgradesMultiModuleVariablesDefinedInExtraPropertiesInBuildscript() {
+        rewriteRun(
+          settingsGradle(
+            """
+              rootProject.name = 'test'
+              include 'module1'
+              include 'module2'
               """
+          ),
+          buildGradle(
+            """
+              buildscript {
+                  ext {
+                      guavaVersion = "29.0-jre"
+                  }
+              }
+
+              repositories {
+                  mavenCentral()
+              }
+
+              subprojects {
+                  apply plugin: 'java'
+
+                  repositories {
+                      mavenCentral()
+                  }
+              }
+              """,
+            """
+              buildscript {
+                  ext {
+                      guavaVersion = "30.1.1-jre"
+                  }
+              }
+
+              repositories {
+                  mavenCentral()
+              }
+
+              subprojects {
+                  apply plugin: 'java'
+
+                  repositories {
+                      mavenCentral()
+                  }
+              }
+              """
+          ),
+          buildGradle(
+            """
+              dependencies {
+                  implementation 'com.google.guava:guava:' + guavaVersion
+              }
+              """,
+            spec -> spec.path("module1/build.gradle")
+          ), buildGradle(
+            """
+              dependencies {
+                  implementation 'com.google.guava:guava:' + guavaVersion
+              }
+              """,
+            spec -> spec.path("module2/build.gradle")
           )
         );
     }
@@ -488,19 +681,19 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                       classpath("com.google.guava:guava:${guavaVersion}")
                   }
               }
-              
+
               plugins {
                   id "java"
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               ext {
                   guavaVersion2 = "29.0-jre"
               }
-              
+
               dependencies {
                   implementation "com.google.guava:guava:${guavaVersion2}"
               }
@@ -517,19 +710,19 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                       classpath("com.google.guava:guava:${guavaVersion}")
                   }
               }
-              
+
               plugins {
                   id "java"
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               ext {
                   guavaVersion2 = "30.1.1-jre"
               }
-              
+
               dependencies {
                   implementation "com.google.guava:guava:${guavaVersion2}"
               }
@@ -547,15 +740,15 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   id "java"
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               ext {
                   guavaVersion = "29.0-jre"
               }
-              
+
               def guavaVersion2 = "29.0-jre"
               dependencies {
                   implementation("com.google.guava:guava:29.0-jre")
@@ -568,15 +761,15 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   id "java"
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               ext {
                   guavaVersion = "30.1.1-jre"
               }
-              
+
               def guavaVersion2 = "30.1.1-jre"
               dependencies {
                   implementation("com.google.guava:guava:30.1.1-jre")
@@ -598,11 +791,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation 'com.google.guava:guava:29.0-jre'
               }
@@ -617,11 +810,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                   plugins {
                     id 'java-library'
                   }
-                  
+
                   repositories {
                     mavenCentral()
                   }
-                  
+
                   dependencies {
                     implementation 'com.google.guava:guava:%s'
                   }
@@ -648,11 +841,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                 implementation ("com.google.guava:guava:$guavaVersion")
               }
@@ -675,11 +868,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                 implementation ("com.google.guava:guava:30.1.1-jre")
               }
@@ -714,11 +907,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                 implementation ("com.google.guava:guava:$guavaVersion")
               }
@@ -730,11 +923,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                 implementation ("com.google.guava:guava:$guavaVersion")
               }
@@ -761,18 +954,18 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                       mavenCentral()
               }
-              
+
               subprojects {
                   repositories {
                       mavenCentral()
                   }
-              
+
                   apply plugin: "java-library"
-              
+
                   dependencies {
                     implementation ("com.google.guava:guava:$guavaVersion")
                   }
@@ -791,7 +984,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
@@ -801,6 +994,111 @@ class UpgradeDependencyVersionTest implements RewriteTest {
         );
     }
 
+    @Test
+    void versionInParentPropertiesFiles() {
+        rewriteRun(
+          properties(
+            """
+              guavaVersion=29.0-jre
+              """,
+            """
+              guavaVersion=30.1.1-jre
+              """,
+            spec -> spec.path("gradle.properties")
+          ),
+          buildGradle(
+            """
+              plugins {
+                id 'java-library'
+              }
+
+              repositories {
+                  mavenCentral()
+              }
+              """,
+            spec -> spec.path("build.gradle")
+          ),
+          settingsGradle(
+            """
+              rootProject.name = 'my-project'
+              include("moduleA")
+              """
+          ),
+          buildGradle(
+            """
+              plugins {
+                id 'java-library'
+              }
+
+              repositories {
+                  mavenCentral()
+              }
+
+              dependencies {
+                implementation ("com.google.guava:guava:$guavaVersion")
+              }
+              """,
+            spec -> spec.path("moduleA/build.gradle")
+          )
+        );
+    }
+
+    @Test
+    void versionInParentUsedInChildModules() {
+        rewriteRun(
+          buildGradle(
+            """
+              plugins {
+                id 'java-library'
+              }
+
+              ext {
+                guavaVersion = "29.0-jre"
+              }
+
+              repositories {
+                mavenCentral()
+              }
+              """,
+              """
+              plugins {
+                id 'java-library'
+              }
+
+              ext {
+                guavaVersion = "30.1.1-jre"
+              }
+
+              repositories {
+                mavenCentral()
+              }
+              """,
+            spec -> spec.path("build.gradle")
+          ),
+          settingsGradle(
+            """
+              rootProject.name = 'my-project'
+              include("moduleA")
+              """
+          ),
+          buildGradle(
+            """
+              plugins {
+                id 'java-library'
+              }
+
+              repositories {
+                mavenCentral()
+              }
+
+              dependencies {
+                implementation "com.google.guava:guava:${guavaVersion}"
+              }
+              """,
+            spec -> spec.path("moduleA/build.gradle")
+          )
+        );
+    }
 
     @Test
     void versionOnlyInMultiModuleChildPropertiesFiles() {
@@ -819,11 +1117,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                 implementation ("com.google.guava:guava:$guavaVersion")
               }
@@ -850,11 +1148,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation group: "com.google.guava", name: "guava", version: guavaVersion
               }
@@ -880,11 +1178,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation group: "com.google.guava", name: "guava", version: "${guavaVersion}"
               }
@@ -913,11 +1211,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   id 'java'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   implementation("org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}")
                   implementation("org.springframework.security:spring-security-oauth2-core:${springSecurityVersion}")
@@ -928,29 +1226,22 @@ class UpgradeDependencyVersionTest implements RewriteTest {
     }
 
     @Test
-    void disallowDowngrade() {
+    void retainLatestReleaseOrLatestIntegrationIfUsed() {
         rewriteRun(
-          spec -> spec.recipe(new UpgradeDependencyVersion("org.springframework.security", "*", "5.3.x", null)),
-          properties(
-            """
-              springBootVersion=3.0.0
-              springSecurityVersion=5.4.0
-              """,
-            spec -> spec.path("gradle.properties")
-          ),
+          spec -> spec.recipe(new UpgradeDependencyVersion("org.projectlombok", "lombok", "1.18.*", null)),
           buildGradle(
             """
               plugins {
                   id 'java'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
-                  implementation("org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}")
-                  implementation("org.springframework.security:spring-security-oauth2-core:${springSecurityVersion}")
+                  implementation("org.projectlombok:lombok:latest.release")
+                  testImplementation("org.projectlombok:lombok:latest.integration")
               }
               """
           )
@@ -966,11 +1257,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation 'com.google.guava:guava:29.0-jre'
               }
@@ -988,11 +1279,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   constraints {
                       implementation("com.google.guava:guava:28.0-jre")
@@ -1014,11 +1305,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                   id 'java'
                   id "org.hidetake.swagger.generator" version "2.18.2"
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   swaggerCodegen "org.openapitools:openapi-generator-cli:5.2.0"
               }
@@ -1028,11 +1319,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                   id 'java'
                   id "org.hidetake.swagger.generator" version "2.18.2"
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   swaggerCodegen "org.openapitools:openapi-generator-cli:5.2.1"
               }
@@ -1041,8 +1332,8 @@ class UpgradeDependencyVersionTest implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/4275")
+    @Test
     void noActionForNonStringLiterals() {
         rewriteRun(
           buildGradle(
@@ -1050,11 +1341,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation(gradleApi())
                 jar {
@@ -1066,28 +1357,22 @@ class UpgradeDependencyVersionTest implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite-java-dependencies/pull/106")
+    @Test
     void isAcceptable() {
         // Mimic org.openrewrite.java.dependencies.UpgradeTransitiveDependencyVersion#getVisitor
         UpgradeDependencyVersion guava = new UpgradeDependencyVersion("com.google.guava", "guava", "30.x", "-jre");
         TreeVisitor<?, ExecutionContext> visitor = guava.getVisitor();
 
-        SourceFile sourceFile = PlainTextParser.builder().build().parse("not a gradle file").findFirst().orElseThrow().withSourcePath(Paths.get("not-a-gradle-file.txt"));
+        SourceFile sourceFile = PlainTextParser.builder().build().parse("not a gradle file").findFirst().orElseThrow().withSourcePath(Path.of("not-a-gradle-file.txt"));
         assertThat(visitor.isAcceptable(sourceFile, new InMemoryExecutionContext())).isFalse();
-
-        sourceFile = PlainTextParser.builder().build().parse("empty=").findFirst().orElseThrow().withSourcePath(Paths.get("gradle.lockfile"));
-        assertThat(visitor.isAcceptable(sourceFile, new InMemoryExecutionContext())).isTrue();
-
-        sourceFile = PlainTextParser.builder().build().parse("empty=").findFirst().orElseThrow().withSourcePath(Paths.get("module/gradle.lockfile"));
-        assertThat(visitor.isAcceptable(sourceFile, new InMemoryExecutionContext())).isTrue();
 
         sourceFile = PropertiesParser.builder().build().parse("guavaVersion=29.0-jre").findFirst().orElseThrow();
         assertThat(visitor.isAcceptable(sourceFile, new InMemoryExecutionContext())).isTrue();
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/4333")
+    @Test
     void exactVersionWithExactPattern() {
         rewriteRun(
           spec -> spec.recipe(new UpgradeDependencyVersion("com.google.guava", "guava", "32.1.1", "-jre")),
@@ -1096,11 +1381,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation('com.google.guava:guava:29.0-jre')
               }
@@ -1109,11 +1394,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation('com.google.guava:guava:32.1.1-jre')
               }
@@ -1122,8 +1407,8 @@ class UpgradeDependencyVersionTest implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/4333")
+    @Test
     void exactVersionWithRegexPattern() {
         rewriteRun(
           spec -> spec.recipe(new UpgradeDependencyVersion("com.google.guava", "guava", "32.1.1", "-.*?droid")),
@@ -1132,11 +1417,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation('com.google.guava:guava:29.0-android')
               }
@@ -1145,11 +1430,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation('com.google.guava:guava:32.1.1-android')
               }
@@ -1167,11 +1452,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                   id "java-library"
                   id 'jvm-test-suite'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               testing {
                   suites {
                       test {
@@ -1187,11 +1472,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                   id "java-library"
                   id 'jvm-test-suite'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               testing {
                   suites {
                       test {
@@ -1207,6 +1492,62 @@ class UpgradeDependencyVersionTest implements RewriteTest {
     }
 
     @Test
+    void removesTransitiveDependenciesFromGradleProjectMarker() {
+        rewriteRun(
+          spec -> spec.beforeRecipe(withToolingApi())
+            .recipe(new UpgradeDependencyVersion("io.vertx", "vertx-core", "5.0.1", null)),
+          buildGradle(
+            """
+              plugins {
+                  id 'java-library'
+              }
+
+              repositories {
+                  mavenCentral()
+              }
+
+              dependencies {
+                  implementation 'io.vertx:vertx-core:3.9.8'
+              }
+              """,
+            """
+              plugins {
+                  id 'java-library'
+              }
+
+              repositories {
+                  mavenCentral()
+              }
+
+              dependencies {
+                  implementation 'io.vertx:vertx-core:5.0.1'
+              }
+              """,
+            spec -> spec.afterRecipe(after -> {
+                Optional<GradleProject> maybeGp = after.getMarkers().findFirst(GradleProject.class);
+                assertThat(maybeGp).isPresent();
+                GradleDependencyConfiguration compileClasspath = maybeGp.get().getConfiguration("compileClasspath");
+                assertThat(compileClasspath).isNotNull();
+
+                // Check that vertx-core is updated to 5.0.1
+                assertThat(compileClasspath.getResolved())
+                  .as("GradleProject resolved dependencies should have vertx-core 5.0.1")
+                  .anySatisfy(dep -> {
+                      assertThat(dep.getGroupId()).isEqualTo("io.vertx");
+                      assertThat(dep.getArtifactId()).isEqualTo("vertx-core");
+                      assertThat(dep.getVersion()).isEqualTo("5.0.1");
+                  });
+
+                // Check that netty-codec is NOT listed amongst the dependencies as it is not a dependency of vertx-core 5.0.1
+                assertThat(compileClasspath.getResolved())
+                  .as("GradleProject resolved dependencies should NOT contain netty-codec after upgrade to vertx-core 5.0.1")
+                  .noneMatch(dep -> "io.netty".equals(dep.getGroupId()) && "netty-codec".equals(dep.getArtifactId()));
+            })
+          )
+        );
+    }
+
+    @Test
     void dependenciesBlockInFreestandingScript() {
         rewriteRun(
           spec -> spec.recipe(new UpgradeDependencyVersion("com.fasterxml.jackson.core", "jackson-databind", "2.17.0-2.17.2", null)),
@@ -1216,7 +1557,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                   mavenLocal()
                   mavenCentral()
                   maven {
-                     url = uri("https://oss.sonatype.org/content/repositories/snapshots")
+                     url = uri("https://central.sonatype.com/repository/maven-snapshots")
                   }
               }
               dependencies {
@@ -1228,7 +1569,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                   mavenLocal()
                   mavenCentral()
                   maven {
-                     url = uri("https://oss.sonatype.org/content/repositories/snapshots")
+                     url = uri("https://central.sonatype.com/repository/maven-snapshots")
                   }
               }
               dependencies {
@@ -1248,8 +1589,8 @@ class UpgradeDependencyVersionTest implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/4655")
+    @Test
     void issue4655() {
         rewriteRun(
           buildGradle(
@@ -1257,11 +1598,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               version='ORC-246-1-SNAPSHOT'
               dependencies {
                 implementation "com.veon.eurasia.oraculum:jira-api:$version"
@@ -1279,7 +1620,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               dependencies {
                 implementation "com.google.guava:guava:29.0-jre"
               }
@@ -1288,7 +1629,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               dependencies {
                 /*~~(com.google.guava:guava failed. Unable to download metadata.)~~>*/implementation "com.google.guava:guava:29.0-jre"
               }
@@ -1305,11 +1646,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   `java-library`
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   implementation("com.google.guava:guava:29.0-jre")
               }
@@ -1318,11 +1659,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   `java-library`
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   implementation("com.google.guava:guava:30.1.1-jre")
               }
@@ -1339,11 +1680,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   `java-library`
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   implementation(group = "com.google.guava", name = "guava", version = "29.0-jre")
               }
@@ -1352,11 +1693,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   `java-library`
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   implementation(group = "com.google.guava", name = "guava", version = "30.1.1-jre")
               }
@@ -1373,11 +1714,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   `java-library`
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   val guavaVersion = "29.0-jre"
                   implementation(group = "com.google.guava", name = "guava", version = guavaVersion)
@@ -1387,11 +1728,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   `java-library`
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   val guavaVersion = "30.1.1-jre"
                   implementation(group = "com.google.guava", name = "guava", version = guavaVersion)
@@ -1409,11 +1750,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   `java-library`
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   val guavaVersion = "29.0-jre"
                   implementation("com.google.guava:guava:${guavaVersion}")
@@ -1423,394 +1764,16 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   `java-library`
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   val guavaVersion = "30.1.1-jre"
                   implementation("com.google.guava:guava:${guavaVersion}")
               }
               """
-          )
-        );
-    }
-
-    @Test
-    void lockFileGetsUpdated() {
-        rewriteRun(
-          spec -> spec.recipe(new UpgradeDependencyVersion("org.apache.tomcat.embed", "*", "10.0.27", null)),
-          //language=groovy
-          buildGradle(
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.0-M1'
-              }
-              """,
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.27'
-              }
-              """
-          ), lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              org.apache.tomcat.embed:tomcat-embed-core:10.0.0-M1=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.apache.tomcat:tomcat-annotations-api:10.0.0-M1=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              org.apache.tomcat.embed:tomcat-embed-core:10.0.27=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.apache.tomcat:tomcat-annotations-api:10.0.27=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """
-          )
-        );
-    }
-
-    @Test
-    void multimoduleProjectLockFile() {
-        rewriteRun(spec ->
-            spec.recipe(new UpgradeDependencyVersion("org.apache.tomcat.embed", "*", "10.0.27", null)),
-          settingsGradle(
-            """
-              rootProject.name = 'my-project'
-              include("moduleA")
-              include("moduleB")
-              include("moduleC")
-              """
-          ),
-          buildGradle(
-            """
-              """
-          ),
-          lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              empty=
-              """,
-            spec -> spec.path("gradle.lockfile")
-          ),
-          //language=groovy
-          buildGradle(
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.0-M1'
-              }
-              """,
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.27'
-              }
-              """,
-            spec -> spec.path("moduleA/build.gradle")
-          ), lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              org.apache.tomcat.embed:tomcat-embed-core:10.0.0-M1=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.apache.tomcat:tomcat-annotations-api:10.0.0-M1=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              org.apache.tomcat.embed:tomcat-embed-core:10.0.27=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.apache.tomcat:tomcat-annotations-api:10.0.27=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            spec -> spec.path("moduleA/gradle.lockfile")
-          ),
-          buildGradle(
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'com.fasterxml.jackson.core:jackson-core:2.15.4'
-                  implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.4'
-                  implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.4'
-              }
-              """,
-            spec -> spec.path("moduleB/build.gradle")
-          ), lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              com.fasterxml.jackson.core:jackson-annotations:2.15.4=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-core:2.15.4=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-databind:2.15.4=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson:jackson-bom:2.15.4=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            spec -> spec.path("moduleB/gradle.lockfile")
-          ),
-          buildGradle(
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'org.apache.tomcat:tomcat-annotations-api:10.0.0-M1'
-              }
-              """,
-            spec -> spec.path("moduleC/build.gradle")
-          ), lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              org.apache.tomcat:tomcat-annotations-api:10.0.0-M1=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            spec -> spec.path("moduleC/gradle.lockfile")
-          )
-        );
-    }
-
-
-    @Test
-    void bomGetsUpdatedInLockFile() {
-        rewriteRun(
-          spec -> spec.recipe(new UpgradeDependencyVersion("io.pivotal.cfenv", "java-cfenv-boot", "3.4.0", null)),
-          //language=groovy
-          buildGradle(
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation "io.pivotal.cfenv:java-cfenv-boot:3.3.0"
-              }
-              """,
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation "io.pivotal.cfenv:java-cfenv-boot:3.4.0"
-              }
-              """
-          ), lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              com.cedarsoftware:java-util:2.17.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.cedarsoftware:json-io:4.30.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              io.micrometer:micrometer-commons:1.13.6=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              io.micrometer:micrometer-observation:1.13.6=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              io.pivotal.cfenv:java-cfenv-boot:3.3.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              io.pivotal.cfenv:java-cfenv-jdbc:3.3.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              io.pivotal.cfenv:java-cfenv:3.3.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework.boot:spring-boot-dependencies:3.3.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework.boot:spring-boot:3.3.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-aop:6.1.14=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-beans:6.1.14=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-context:6.1.14=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-core:6.1.14=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-expression:6.1.14=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-jcl:6.1.14=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              com.cedarsoftware:java-util:3.2.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.cedarsoftware:json-io:4.51.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              io.micrometer:micrometer-commons:1.14.4=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              io.micrometer:micrometer-observation:1.14.4=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              io.pivotal.cfenv:java-cfenv-boot:3.4.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              io.pivotal.cfenv:java-cfenv-jdbc:3.4.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              io.pivotal.cfenv:java-cfenv:3.4.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework.boot:spring-boot-dependencies:3.4.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework.boot:spring-boot:3.4.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-aop:6.2.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-beans:6.2.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-context:6.2.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-core:6.2.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-expression:6.2.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-jcl:6.2.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """
-          )
-        );
-    }
-
-    @Test
-    void jacksonBomGetsUpdatedInLockFile() {
-        rewriteRun(
-          spec -> spec.recipe(new UpgradeDependencyVersion("com.fasterxml*", "jackson-core", "2.15.4", null)),
-          //language=groovy
-          buildGradle(
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'com.fasterxml.jackson.core:jackson-core:2.15.3'
-                  implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.3'
-                  implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'
-              }
-              """,
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'com.fasterxml.jackson.core:jackson-core:2.15.4'
-                  implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.3'
-                  implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'
-              }
-              """
-          ), lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              com.fasterxml.jackson.core:jackson-annotations:2.15.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-core:2.15.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-databind:2.15.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson:jackson-bom:2.15.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              com.fasterxml.jackson.core:jackson-annotations:2.15.4=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-core:2.15.4=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-databind:2.15.4=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson:jackson-bom:2.15.4=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """
-          )
-        );
-    }
-
-    @Test
-    void multiProject() {
-        rewriteRun(
-          spec -> spec.recipe(new UpgradeDependencyVersion("org.apache.tomcat.embed", "*", "10.0.27", null)),
-          buildGradle(
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.0-M1'
-              }
-              """,
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.27'
-              }
-              """,
-            spec -> spec.path("moduleA/build.gradle")
-          ), lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              org.apache.tomcat.embed:tomcat-embed-core:10.0.0-M1=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.apache.tomcat:tomcat-annotations-api:10.0.0-M1=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              org.apache.tomcat.embed:tomcat-embed-core:10.0.27=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.apache.tomcat:tomcat-annotations-api:10.0.27=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            spec -> spec.path("moduleA/gradle.lockfile")
-          ),
-          settingsGradle(
-            """
-              rootProject.name = 'moduleB'
-              include("moduleC")
-              """,
-            spec -> spec.path("moduleB/settings.gradle")
-          ),
-          buildGradle(
-            """
-              """,
-            spec -> spec.path("moduleB/build.gradle")
-          ),
-          lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              empty=
-              """,
-            spec -> spec.path("moduleB/gradle.lockfile")
-          ),
-          //language=groovy
-          buildGradle(
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.0-M1'
-              }
-              """,
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.27'
-              }
-              """,
-            spec -> spec.path("moduleB/moduleC/build.gradle")
-          ), lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              org.apache.tomcat.embed:tomcat-embed-core:10.0.0-M1=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.apache.tomcat:tomcat-annotations-api:10.0.0-M1=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              org.apache.tomcat.embed:tomcat-embed-core:10.0.27=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.apache.tomcat:tomcat-annotations-api:10.0.27=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            spec -> spec.path("moduleB/moduleC/gradle.lockfile")
           )
         );
     }
@@ -1823,16 +1786,16 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 compileOnly 'com.google.guava:guava:29.0-jre'
                 runtimeOnly ('com.google.guava:guava:29.0-jre')
               }
-              
+
               task executeShellCommands {
                   doLast {
                       exec {
@@ -1848,16 +1811,16 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 compileOnly 'com.google.guava:guava:30.1.1-jre'
                 runtimeOnly ('com.google.guava:guava:30.1.1-jre')
               }
-              
+
               task executeShellCommands {
                   doLast {
                       exec {
@@ -1866,6 +1829,274 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                               echo "TEST" > "$someVar"
                           \"""
                       }
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void updateVersionDefinedInExtraPropertiesWithInlineReferenceInDependenciesGradle() {
+        rewriteRun(
+          buildGradle(
+            """
+              dependencies {
+                  implementation "com.google.guava:guava:${guavaVersion}"
+              }
+              """,
+            spec -> spec.path("dependencies.gradle")
+          ),
+          buildGradle(
+            """
+              buildscript {
+                  ext {
+                      guavaVersion = "29.0-jre"
+                  }
+              }
+
+              plugins {
+                  id("java")
+              }
+
+              repositories {
+                  mavenCentral()
+              }
+
+              apply from: 'dependencies.gradle'
+              """,
+            """
+              buildscript {
+                  ext {
+                      guavaVersion = "30.1.1-jre"
+                  }
+              }
+
+              plugins {
+                  id("java")
+              }
+
+              repositories {
+                  mavenCentral()
+              }
+
+              apply from: 'dependencies.gradle'
+              """
+          )
+        );
+    }
+
+    @Test
+    void updateVersionDefinedInExtraPropertiesWithConcatenatedReferenceInDependenciesGradle() {
+        rewriteRun(
+          buildGradle(
+            """
+              dependencies {
+                  implementation 'com.google.guava:guava:' + guavaVersion
+              }
+              """,
+            spec -> spec.path("dependencies.gradle")
+          ),
+          buildGradle(
+            """
+              buildscript {
+                  ext {
+                      guavaVersion = "29.0-jre"
+                  }
+              }
+
+              plugins {
+                  id("java")
+              }
+
+              repositories {
+                  mavenCentral()
+              }
+
+              apply from: 'dependencies.gradle'
+              """,
+            """
+              buildscript {
+                  ext {
+                      guavaVersion = "30.1.1-jre"
+                  }
+              }
+
+              plugins {
+                  id("java")
+              }
+
+              repositories {
+                  mavenCentral()
+              }
+
+              apply from: 'dependencies.gradle'
+              """
+          )
+        );
+    }
+
+    @Test
+    void ignoreVersionDefinedInExtraPropertiesWithConcatenatedReferenceInDependenciesGradleWhenConcatenationLeftIsNotADependency() {
+        rewriteRun(
+          buildGradle(
+            """
+              dependencies {
+                  implementation 'com.google.guava:' + 'guava:' + guavaVersion
+              }
+              """,
+            spec -> spec.path("dependencies.gradle")
+          ),
+          buildGradle(
+            """
+              buildscript {
+                  ext {
+                      guavaVersion = "29.0-jre"
+                  }
+              }
+
+              plugins {
+                  id("java")
+              }
+
+              repositories {
+                  mavenCentral()
+              }
+
+              apply from: 'dependencies.gradle'
+              """
+          )
+        );
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {
+      "\"com.fasterxml.jackson.core:jackson-databind:${gradle.jackson}\"",
+      "group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: gradle.jackson",
+      "group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: \"$gradle.jackson\"",
+      "group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: \"${gradle.jackson}\""
+    })
+    void upgradeVersionInSettingsGradleExt(String dependencyNotation) {
+        rewriteRun(
+          spec -> spec.recipe(new UpgradeDependencyVersion("com.fasterxml.jackson.core", "jackson-databind", "2.15.0", null)),
+          settingsGradle(
+            """
+              gradle.ext {
+                  jackson = '2.13.3'
+              }
+              """,
+            """
+              gradle.ext {
+                  jackson = '2.15.0'
+              }
+              """
+          ),
+          buildGradle(
+            """
+              plugins {
+                  id 'java-library'
+              }
+
+              repositories {
+                  mavenCentral()
+              }
+
+              dependencies {
+                  implementation %s
+              }
+              """.formatted(dependencyNotation)
+          )
+        );
+    }
+
+    @Test
+    void doesNotDowngradeRegularDependencyVersion() {
+        rewriteRun(
+          spec -> spec.beforeRecipe(withToolingApi())
+            .recipe(new UpgradeDependencyVersion("org.apache.tomcat.embed", "tomcat-embed-core", "10.1.33", null)),
+          //language=groovy
+          buildGradle(
+            """
+              plugins { id 'java' }
+              repositories { mavenCentral() }
+
+              dependencies {
+                  implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.1.43'
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void doesNotDowngradeBuildscriptDependencyVersion() {
+        rewriteRun(
+          spec -> spec.beforeRecipe(withToolingApi())
+            .recipe(new UpgradeDependencyVersion("com.google.guava", "guava", "29.0-jre", null)),
+          //language=groovy
+          buildGradle(
+            """
+              buildscript {
+                  repositories {
+                      mavenCentral()
+                  }
+                  dependencies {
+                      classpath("com.google.guava:guava:30.1.1-jre")
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void doesNotDowngradeRegularDependencyVersionInSettingsGradleExt() {
+        rewriteRun(
+          spec -> spec.recipe(new UpgradeDependencyVersion("com.fasterxml.jackson.core", "jackson-databind", "2.13.2", null)),
+          settingsGradle(
+            """
+              gradle.ext {
+                  jackson = '2.13.3'
+              }
+              """
+          ),
+          buildGradle(
+            """
+              plugins {
+                  id 'java-library'
+              }
+    
+              repositories {
+                  mavenCentral()
+              }
+    
+              dependencies {
+                  implementation "com.fasterxml.jackson.core:jackson-databind:${gradle.jackson}"
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void doesNotDowngradeBuildscriptDependencyVersionInSettingsGradleExt() {
+        rewriteRun(
+          spec -> spec.recipe(new UpgradeDependencyVersion("com.fasterxml.jackson.core", "jackson-databind", "2.13.2", null)),
+          settingsGradle(
+            """
+              gradle.ext {
+                  jackson = '2.13.3'
+              }
+              """
+          ),
+          buildGradle(
+            """
+              buildscript {
+                  repositories {
+                      mavenCentral()
+                  }
+                  dependencies {
+                      classpath "com.fasterxml.jackson.core:jackson-databind:${gradle.jackson}"
                   }
               }
               """
